--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Yourname Theme</title>
+    <title>Freelancer - Weiming Chen Theme</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Yourname</a>
+                <a class="navbar-brand" href="#page-top">Weiming Chen</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -70,9 +70,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Hey there! I am Yourname!</span>
+                        <span class="name">Hey there! I am Weiming Chen!</span>
                         <hr class="star-light">
-                        <span class="skills">Add your skills here. Eg: <br/> Web Developer - Graphic Artist</span>
+                        <span class="skills">Skills<br/>Student: python Java JavaScript C++ </span>
                     </div>
                 </div>
             </div>
@@ -164,10 +164,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Write a paragraph about who you are, where you're from, etc.</p>
+                    <p>Will update my basic information here</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Write a short paragraph about your hobbies and interests.</p>
+                    <p>Will update my personal interests here</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <!-- <a href="#" class="btn btn-lg btn-outline">
@@ -187,9 +187,10 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Your hostel address line 1
-                            <br>Your hostel address line 2</p>
+                        <p>Will update location here
+                            <br>Will update location here</p>
                     </div>
+                    <!--
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
@@ -210,9 +211,10 @@
                             </li>
                         </ul>
                     </div>
+                    -->
                     <div class="footer-col col-md-4">
-                        <h3>Yourname</h3>
-                        <p><a href="http://startbootstrap.com">Yourname</a>.</p>
+                        <h3>Weiming Chen</h3>
+                        <p><a href="http://startbootstrap.com">Weimng Chen</a>.</p>
                     </div>
                 </div>
             </div>
@@ -221,7 +223,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; mingrobb.github.io 2018
                     </div>
                 </div>
             </div>
@@ -254,7 +256,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                    <strong><a href="http://startbootstrap.com">Weiming Chen</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -291,7 +293,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                    <strong><a href="http://startbootstrap.com">Weiming Chen</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -328,7 +330,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                    <strong><a href="http://startbootstrap.com">Weiming Chen</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -365,7 +367,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                    <strong><a href="http://startbootstrap.com">Weiming Chen</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -402,7 +404,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                    <strong><a href="http://startbootstrap.com">Weiming Chen</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -439,7 +441,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                    <strong><a href="http://startbootstrap.com">Weiming Chen</a>
                                     </strong>
                                 </li>
                                 <li>Date:
