update blog address

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Weiming Chen</h3>
-                        <p><a href="http://startbootstrap.com">Weimng Chen</a>.</p>
+                        <p><a href="http://www.cwmlzr.com">Here is my own blog website</a>.</p>
                     </div>
                 </div>
             </div>
