--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>This projrct include serveral path finding algorithms, which are Breadth first search, Death first search, A star, Weighted A star, Unifirm cost search, Greedy best first search. <a href="https://mingrobb.github.io//pathFinding/index.html">Path finding GUI</a></p>
+                            <p>This projrct include serveral path finding algorithms, which are Breadth first search, Death first search, A star, Weighted A star, Unifirm cost search, Greedy best first search. <a href="https://mingrobb.github.io/pathFinding/index.html">Path finding GUI</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Weiming Chen</a>
